fixed text nowrap on notification box

--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -387,6 +387,7 @@ input[type="text"]:focus{
             padding: 10px 20px;
             min-width: 200px;
             color: #fff;
+            white-space: pre-wrap !important;
         }
     }
 }
